--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_BACKEND_URL=https://promptovideo-41.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://videogenai-46.preview.emergentagent.com
 WDS_SOCKET_PORT=443
 ENABLE_HEALTH_CHECK=false
